# rust-events-oriented-arch

./: .gitignore  Cargo.toml  Makefile  README.md  docker-compose.tests.yaml  docker-compose.yaml
.github/workflows/: lint-and-unit-test.yaml  unit-test.yaml
api/: Cargo.toml  Dockerfile  Dockerfile.dev  Makefile
api/src/: app.rs  config.rs  error.rs  lib.rs  main.rs  schema.rs
api/src/actors/: ws_server.rs
api/src/handlers/: auth.rs  health.rs  index.rs  message.rs  user.rs
api/src/middlewares/: jwt_auth.rs
api/src/models/: mod.rs  user.rs
api/src/repositories/: user_repository.rs
api/src/services/: event_service.rs  user_service.rs
api/tests/handlers/: user_test.rs
api/tests/repositories/: mod.rs  user_repository_test.rs
consumer/: Cargo.toml  Dockerfile.dev
consumer/src/: main.rs
docker.prod/: Dockerfile.api  Dockerfile.consumer  Dockerfile.fe  Dockerfile.migrations  Dockerfile.news  Dockerfile.news-scrapper  Dockerfile.users
frontend/: Dockerfile  Dockerfile.dev  package-lock.json  package.json
frontend/src/: App.tsx  setupProxy.js
frontend/src/components/: Feeds.tsx  Logout.tsx  UserInfo.tsx  WebsocketComponent.tsx
frontend/src/services/: api.ts
infra/db-init-scripts/: create_schemas.sql
infra/docker.prod/: Dockerfile.news-migrations  Dockerfile.users-migrations
infra/k8s/: deployment.yaml  kafka.yaml  migrations.yaml  postgres.yaml
infra/k8s/kube-prometheus-stack/: myvalues.yaml
k8s/: basic.yaml  deployment.yaml  migrations.yaml  postgres.yaml
news/: Cargo.toml  Dockerfile.dev  Dockerfile.migrations
news-scrapper/: Cargo.toml  Dockerfile.dev
news-scrapper/src/: config.rs  http_fetcher.rs  lib.rs  main.rs  news_ingestor.rs  scrapper.rs
news/migrations/2023-09-20-081039_create_feeds/: up.sql
news/migrations/2023-09-20-094646_create_news/: up.sql
news/migrations/2023-09-20-121248_insert_feeds/: up.sql
news/migrations/2023-09-23-202817_create_subscriptions/: up.sql
news/src/: app.rs  config.rs  lib.rs  main.rs  news_created_subscriber.rs  news_websocket_processor.rs  schema.rs  scrapper.rs
news/src/handlers/: feeds.rs  mod.rs  news.rs  subscriptions.rs
news/src/models/: feed.rs  mod.rs  news.rs  subscription.rs
news/src/repositories/: feed_repository.rs  mod.rs  news_repository.rs  subscription_repository.rs
users/: Cargo.toml  Dockerfile.dev  Dockerfile.migrations  postman.json
users/migrations/2023-09-03-080958_create_users_table/: up.sql
users/migrations/2023-09-05-083304_add_password_to_users/: down.sql
users/migrations/2023-09-05-091229_add_name_unique_to_user/: down.sql  up.sql
users/src/: app.rs  config.rs  error.rs  lib.rs  main.rs
users/src/actors/: ws_server.rs  ws_session.rs
users/src/handlers/: auth.rs  health.rs  index.rs  message.rs  mod.rs  user.rs  ws.rs
users/src/middlewares/: jwt_auth.rs
users/src/repositories/: user_repository.rs
users/src/services/: event_service.rs  user_service.rs
users/tests/handlers/: user_test.rs
users/tests/repositories/: user_repository_test.rs
utils/: Cargo.toml
utils/src/: broker.rs  db.rs  error.rs  http_server.rs  lib.rs  logger.rs  serializer.rs
utils/src/http/: middlewares.rs  mod.rs  test_utils.rs  utils.rs
utils/src/http/middlewares/: cors.rs  jwt_auth.rs  mod.rs
utils/src/http/services/: auth_service.rs
utils/src/http/websockets/: mod.rs  ws_handler.rs  ws_sender.rs  ws_server.rs  ws_session.rs
utils/src/news/: events.rs  mod.rs  schema.rs
utils/src/news/models/: feed.rs  news.rs  subscription.rs
utils/src/news/repositories/: feed_repository.rs  mod.rs  news_repository.rs  subscription_repository.rs
utils/src/news/services/: events_service.rs  mod.rs  news_service.rs
utils/src/pipeline/: consumer.rs  data_pipeline.rs  mod.rs  processor.rs
