[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# "sync", "io-util"

[dependencies]
actix-web = "4.4"
tokio-postgres = "0.7.6"
tokio = { version = "1.24.2", features = ["full"] }
actix-web-actors = "4.2.0"
actix = "0.13.1"
env_logger = "0.10.0"
log = "0.4.20"
diesel = { version = "2.1.1", features = ["postgres","r2d2","uuid"] }
diesel_migrations = "2.1.0"
uuid = { version="1.4.1", features=["v4","serde"] }
serde = "1.0.188"
serde_json = "1.0.105"
actix-rt = "2.9.0"
async-trait = "0.1.73"
rdkafka = "0.34.0"
chrono = "0.4.28"
rand = "0.8.5"
jsonwebtoken = "8.3.0"
argon2 = "0.5.2"
utils={ path = "../utils", features = ["broker","database"] }
validator = { version = "0.15", features = ["derive"] }
futures = "0.3.28"
mockall = "0.11.4"
rstest = "0.18.2"
actix-threadpool = "0.3.3"

