[package]
name = "consumer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.28"
env_logger = "0.10.0"
log = "0.4.20"
rdkafka = "0.34.0"
tokio = { version = "1.0", features = ["full"] }
