[package]
name = "news-scrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
bytes = "1.5.0"
feed-rs = "1.3.0"
futures = "0.3.28"
log = "0.4.20"
mockall = "0.11.4"
mockito = "1.2.0"
reqwest = "0.11.20"
tokio = "1.32.0"
tokio-cron-scheduler = "0.9.4"
utils = { path = "../utils", features = ["broker", "database", "news"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
