[package]
name = "news"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
diesel = { version = "2.1.1", features = [
  "postgres",
  "r2d2",
  "uuid",
  "chrono",
] }
feed-rs = "1.3.0"
futures = "0.3.28"
reqwest = "0.11.20"
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
utils = { path = "../utils", features = ["broker", "database"] }
chrono = "0.4.31"
log = "0.4.20"
tokio-cron-scheduler = "0.9.4"
actix-web = "4.4.0"
mockito = "1.2.0"
mockall = "0.11.4"
async-trait = "0.1.73"
actix-rt = "2.9.0"
serde_json = "1.0.107"
validator = { version = "0.16.1", features = ["derive"] }
