[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.4.0"
chrono = "0.4.29"
diesel = { version = "2.1.1", features = [
  "postgres",
  "r2d2",
  "uuid",
], optional = true }
env_logger = "0.10.0"
jsonwebtoken = "8.3.0"
rdkafka = { version = "0.34.0", optional = true }
serde = "1.0.188"
serde_json = "1.0.107"
uuid = { version = "1.4.1", features = ["v4", "serde"] }

[features]
default = []
database = ["dep:diesel"]
broker = ["dep:rdkafka"]
