[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-cors = "0.6.4"
actix-http = "3.4.0"
actix-web = "4.4.0"
actix-web-actors = "4.2.0"
actix-web-prom = "0.7.0"
async-trait = "0.1.73"
chrono = "0.4.29"
diesel = { version = "2.1.1", features = [
  "postgres",
  "r2d2",
  "uuid",
  "chrono",
], optional = true }
env_logger = "0.10.0"
feed-rs = { version = "1.3.0", optional = true }
jsonwebtoken = "8.3.0"
log = "0.4.20"
mockall = "0.11.4"
rand = "0.8.5"
rdkafka = { version = "0.34.0", optional = true }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = "1.32.0"
uuid = { version = "1.4.1", features = ["v4", "serde"] }

[features]
default = []
database = ["dep:diesel"]
broker = ["dep:rdkafka"]
news = ["dep:feed-rs"]
